--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ nav li {
     display: inline-flex;
     /* flex-direction: column; */
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 1px;
+    justify-content: space-around;  
 
 }
 .square {
@@ -29,6 +28,26 @@ nav li {
 figcaption {
     text-align: center;
 }
-.locations img {
+/* .locations {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+} */
+.locations {
+    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg");
     height: 500px;
+    width: 1100px;
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: 0 auto;
+   
+}
+.card {
+    background-color: blue;
+    width: 300px;
+    margin: 40px 15px;
 }
